--- a/_quarto.yml
+++ b/_quarto.yml
@@ -2,7 +2,7 @@ project:
   type: website
 
 website:
-  title: "C++ と Julia ナンモワカラン"
+  title: "忙しい人のための C++/Julia 連携"
   navbar:
     left:
       - href: slide/slide.qmd
